macros1/stdout.txt
Checking test execution result...
[!] Test execution result: FAILED
Checking source code format...
  Preparing source code for format check...
  Running format check...
// =====================================================
//  Running cargo fmt...
// =====================================================

// =====================================================
//    Running cargo clippy...
// =====================================================

    Checking format_check v0.1.0 (/home/runner/work/rustlings-zaychyk/rustlings-zaychyk/format_check)
warning: unused macro definition: `my_macro`
 --> src/lib.rs:8:14
  |
8 | macro_rules! my_macro {
  |              ^^^^^^^^
  |
  = note: `#[warn(unused_macros)]` on by default

error[E0423]: expected function, found macro `my_macro`
  --> src/lib.rs:15:5
   |
15 |     my_macro();
   |     ^^^^^^^^ not a function
   |
help: use `!` to invoke the macro
   |
15 |     my_macro!();
   |             +

For more information about this error, try `rustc --explain E0423`.
warning: `format_check` (lib) generated 1 warning
error: could not compile `format_check` (lib) due to 1 previous error; 1 warning emitted

[!] Source code format check: FAILED
